Make input's props.value reactive and fix segment stretch

--- a/src/components/Basic/Input/InputBase/InputBase.module.scss
+++ b/src/components/Basic/Input/InputBase/InputBase.module.scss
@@ -5,6 +5,7 @@
     font-size: 1vmax;
     height: 100%;
     width: 100%;
+    background-color: transparent;
 
     &-wrapper {
         display: flex;
