--- a/src/components/Basic/Segment/Segment.module.scss
+++ b/src/components/Basic/Segment/Segment.module.scss
@@ -5,6 +5,7 @@
     background-color: #D9D9D9;
     border-radius: 10px;
     position: relative;
+    align-self: center;
 
     &-wrapper {
         display: flex;
